EnvLoader improvement + Build without jpackage.. for now